src/objects/Google_Analytics_Report__c.object
<CustomObject>
    <description>Object to support the integration with Google Analytics. This object holds information that relates to the JSON request sent to GA.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Identity_Platform__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Google Identity Platform</label>
        <referenceTo>Google_Identity_Platform__c</referenceTo>
        <relationshipLabel>Google Analytics Reports</relationshipLabel>
        <relationshipName>Google_Analytics_Reports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HTTP_End_Point__c</fullName>
        <label>HTTP End Point</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Header_Content_Type__c</fullName>
        <label>HTTP Header Content-Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>application/json</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Related__c</fullName>
        <label>Object Related</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Person Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <label>Report Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <label>Trigger</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>After Insert</fullName>
                </value>
                <value>
                    <fullName>After Update</fullName>
                </value>
                <value>
                    <fullName>After Insert &amp; Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Google Analytics Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Object_Related__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Google Analytics Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Analytics Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>